--- a/app/static/css/modals.css
+++ b/app/static/css/modals.css
@@ -31,6 +31,7 @@
     max-width: 500px;
     width: 90%;
     position: relative;
+    box-sizing: border-box;
 }
 
 label {
